1. Creazione classe astratta (BaseEntity) - 2. Incapsulamento ed ereditarietà (classe AssetModel) - 3. Utilizzo del Generics nella classe AssetRepository - 4. Eccezioni unchecked in AssetService - 5. Utilizzo Optional, Lambda Expression, Collectors, Collection, Method reference nell'AssetService (sostituito il metodo iniziale per implementare l'Optional) - 6. Creazione classe AssetServiceTest per l'utilizzo di JUnit e Mockito